--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <input type="text" id="mm" placeholder="minutes"value="00"/>
     <input type="text" id="ss" placeholder="seconds" value="00"/>
 			</div>
-            <button class="dym" onclick="tyym()">SUBMIT TIME</button>
+            <button class="dym" onclick="tyym()" style="width: 100%;">SUBMIT TIME</button>
 </section>
     </div>
     <div class="pages" id="page_3">
