--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <input type="text" id="hh" placeholder="Hours" value="00"/>
     <input type="text" id="mm" placeholder="minutes"value="00"/>
     <input type="text" id="ss" placeholder="seconds" value="00"/>
-			</div>
-            <button class="dym" onclick="tyym()" style="width: 100%;">SUBMIT TIME</button>
+	<button class="dym" onclick="tyym()" style="margin-bottom: 0;">SUBMIT TIME</button>
+</div>
 </section>
     </div>
     <div class="pages" id="page_3">
