--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <input type="text" id="hh" placeholder="Hours" value="00"/>
     <input type="text" id="mm" placeholder="minutes"value="00"/>
     <input type="text" id="ss" placeholder="seconds" value="00"/>
-	<button class="dym" onclick="tyym()" style="margin-bottom: 0;">SUBMIT TIME</button>
+	<button class="dym" onclick="tyym()">SUBMIT TIME</button>
 </div>
 </section>
     </div>
