--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     </div>
     <div class="pages" id="page_2">
-        <secton class="sect">
+        <section class="sect">
             <h3>TEAM INFORMATION</h3>
         <div class="clik1">
             <div>
