--- a/index.html
+++ b/index.html
@@ -93,6 +93,18 @@
         </div>
     </div>
     <div class="pages" id="page_4">
+	     <button onclick="appear()" class="butt"><span class="material-symbols-outlined">
+add_circle
+</span></button>
+			  <div class="contain" id="extratime" style="visibility: hidden;">
+			    <div class="cont">
+			      <h4>Extra Time</h4>
+			      <input type="text" id="hrs" placeholder="Hours"/>
+			      <input type="text" id="mns" placeholder="Minutes"/>
+			      <input type="text" id="scs" placeholder="Seconds"/>
+			      <button onclick="extra()">ADD</button>
+			    </div>
+			  </div>
 			<input type="button" class="dym" style="display: none; width: 100vw;" id="coww" value="TABULATE MATCH"/>
         <div class="bars" id="team-1">
             <div class="nimo"><span class="jiek" id="image1001"></span><span id="rell">TEAM NAME</span></div>
