--- a/index.html
+++ b/index.html
@@ -94,9 +94,6 @@
         </div>
     </div>
     <div class="pages" id="page_4">
-	     <button onclick="appear()" class="butt"><span class="material-symbols-outlined">
-add_circle
-</span></button>
 			  <div class="contain" id="extratime" style="visibility: hidden;">
 			    <div class="cont">
 			      <h4>Extra Time</h4>
@@ -126,6 +123,7 @@ add_circle
         </div>
         </div>
 			<div id="tym">
+					     <button onclick="appear()" class="butt">Extra time </button>
 		<h6 style="width: 100%; border-radius: 0; padding: 0px;">MATCH DURATION</h6>
 		<span id="hours">00</span>:
 		<span id="minutes">00</span>:
