--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
               <div>
         <div>
           <img src="favicon.jpeg"/>
-          <div id="kiki">
+          <div id="kiki" class="lop">
           </div>
 </div>
         <button id="match" onclick="apper()">Create Match</button>
