--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </section>
     </div>
     <div class="pages" id="page_3">
-      <div style="position: fixed; display: flex; top: 0; gap: 10px;">
+      <div class="connn">
         <input type="button" id="fron" class="dym" value="back"/>
         <input type="button" id="back" class="dym" value="confirm"/>
       </div>
