--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     </div>
     <div class="pages" id="page_3">
       <div class="connn">
-        <input type="button" id="fron" class="dym" value="back"/>
-        <input type="button" id="back" class="dym" value="confirm"/>
+        <input type="button" id="fron" class="loli" value="back"/>
+        <input type="button" id="back" class="loli" value="confirm"/>
       </div>
         <div id="card_1">
             <H2>HOME</H2>
