--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
         </div>
         </div>
 			<div id="tym">
-					     <button onclick="appear()" class="butt">Extra time </button>
 		<h6 style="width: 100%; border-radius: 0; padding: 0px;">MATCH DURATION</h6>
 		<span id="hours">00</span>:
 		<span id="minutes">00</span>:
 		<span id="secs">00</span>
-		<input type="button" class="dym" onClick="holdr()" id="couy" value="START" style="border-radius: 20px; margin: 20px;"/>
+		<input type="button" class="loli" onClick="holdr()" id="couy" value="START" style="border-radius: 20px; margin: 20px;"/>
+				<button onclick="appear()" class="butt loli">Extra time </button>
 	</div>
     </div>
     <script src="green.js"></script>
