--- a/index.html
+++ b/index.html
@@ -8,9 +8,36 @@
     <link rel="icon" type="image/x-icon" href="favicon.jpeg"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.min.js"></script>
    <title>Nextgen Scoreboard</title>
+	<style>
+		.custom-shape-divider-top-1718877497 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-top-1718877497 svg {
+    position: relative;
+    display: block;
+    width: calc(144% + 1.3px);
+    height: 206px;
+}
+
+.custom-shape-divider-top-1718877497 .shape-fill {
+    fill: #6DF65A;
+}
+	</style>
   </head>
 <body>
     <div class="pages" id="page_1">
+	    <div class="custom-shape-divider-top-1718877497">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M741,116.23C291,117.43,0,27.57,0,6V120H1200V6C1200,27.93,1186.4,119.83,741,116.23Z" class="shape-fill"></path>
+    </svg>
+</div>
               <div>
         <div>
           <img src="favicon.jpeg"/>
