--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </table>
           </div>
             <br>
-			<button id="pliee" style="border-radius: 20px;" class="dym">PRINT</button>
+			<button id="pliee" style="border-radius: 20px;" class="loli">PRINT</button>
     </div>
     </div>
     <div class="pages" id="page_2">
