--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="board.css"/>
 	 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="icon" type="image/x-icon" href="favicon.jpeg"/>
+    <link rel="icon" type="image/x-icon" href="favicon-removebg-preview.png"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.min.js"></script>
    <title>Nextgen Scoreboard</title>
 	<style>
@@ -148,7 +148,7 @@
 			<div id="tym">
 		<span id="hours">00</span>:
 		<span id="minutes">00</span>:
-		<span id="secs">00</span>
+		<span id="secs">00</span><br>
 		<input type="button" class="loli" onClick="holdr()" id="couy" value="START"/>
 				<br>
 		<button onclick="appear()" class="loli">Extra time </button>
