--- a/index.html
+++ b/index.html
@@ -148,9 +148,8 @@
 			<div id="tym">
 		<span id="hours">00</span>:
 		<span id="minutes">00</span>:
-		<span id="secs">00</span><br>
+		<span id="secs">00</span>
 		<input type="button" class="loli" onClick="holdr()" id="couy" value="START"/>
-				<br>
 		<button onclick="appear()" class="loli">Extra time </button>
 	</div>
     </div>
