--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="board.css"/>
 	 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="icon" type="image/x-icon" href="favicon-removebg-preview.png"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.min.js"></script>
    <title>Nextgen Scoreboard</title>
   </head>
 <body>
@@ -104,7 +103,7 @@
 			      <button onclick="extra()">ADD</button>
 			    </div>
 			  </div>
-			<input type="button" class="dym" style="display: none; width: 100vw;" id="coww" value="TABULATE MATCH"/>
+			<input type="button" class="dym tabule" style="display: none; width: 100vw;" id="coww" value="TABULATE MATCH"/>
         <div class="bars" id="team-1">
             <div class="nimo"><span class="jiek" id="image1001"></span><span id="rell">TEAM NAME</span></div>
             <input id="tio_1" class="tent" type="text" value="0"/>
