--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
    <title>Nextgen Scoreboard</title>
   </head>
 <body>
+	 <a href="#" id="link-holder">
+  
+  </a>
     <div class="pages" id="page_1">
 	 <div>
         <div>
