--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="board.css"/>
+    <link rel="stylesheet" href="board.css" id="themer"/>
 	 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="icon" type="image/x-icon" href="favicon-removebg-preview.png"/>
    <title>Nextgen Scoreboard</title>
@@ -42,18 +42,18 @@
             <h4>TEAM ONE</h4>
             <h5>TEAM NAME</h5>
         <input type="text" id="t_1" placeholder="team name"/>
+    <button class="dym" onclick="reel()">SUBMIT TEAM ONE</button>
     </div>
     </div> 
-    <button class="dym" onclick="reel()">SUBMIT TEAM ONE</button>
     <div class="clik2">
         <div>
         <h4>TEAM TWO</h4>
         <h5>TEAM NAME</h5>
     <input type="text" id="t_2" placeholder="team name"/>
+    <button class="dym" onclick="ripple()">SUBMIT TEAM TWO</button>
     </div>
 </div>
-<button class="dym" onclick="ripple()">SUBMIT TEAM TWO</button>
-					<div class="clik3">
+			<div class="clik3">
 						<section>
 				<h5>TEAM LOGOS</h5>
 				<div class="log">
@@ -62,9 +62,9 @@
             </section>		
 				</div>
 		<div id="txti" style="text-decoration: underline;">CLICK IN THE BOX TO CHOOSE TWO IMAGES</div>
+ 		<button class="dym" onClick="toem()">SUBMIT LOGOS</button>
 						</section>
 			</div>
-			<button class="dym" onClick="toem()">SUBMIT LOGOS</button>
 <div id="typom">
     <h5>MATCH DURATION</h5>
     <input type="text" id="hh" placeholder="Hours" value="00"/>
@@ -106,7 +106,7 @@
 			      <button onclick="extra()">ADD</button>
 			    </div>
 			  </div>
-			<input type="button" class="dym tabule" style="display: none; width: 100vw;" id="coww" value="TABULATE MATCH"/>
+			<input type="button" class="tabule" style="display: none; width: 100vw;" id="coww" value="TABULATE MATCH"/>
         <div class="bars" id="team-1">
             <div class="nimo"><span class="jiek" id="image1001"></span><span id="rell">TEAM NAME</span></div>
             <input id="tio_1" class="tent" type="text" value="0"/>
