--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	 <a href="#" id="link-holder">
   
   </a>
+	 <button id="color-theme">
+    <span class="material-symbols-outlined">
+    nightlight
+    </span>
     <div class="pages" id="page_1">
 	 <div>
         <div>
