--- a/index.html
+++ b/index.html
@@ -3,140 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ed.css"/>
-	 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="board.css" id="themer"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
     <link rel="icon" type="image/x-icon" href="favicon-removebg-preview.png"/>
-   <title>Nextgen Scoreboard</title>
-  </head>
+    <title>Nextgen Scoreboard</title>
+</head>
 <body>
-	 <a href="#" id="link-holder">
-  
-  </a>
-	 <button id="color-theme">
-    <span class="material-symbols-outlined">
-    nightlight
-    </span>
+    <a href="#" id="link-holder"></a>
+    <button id="color-theme">
+        <span class="material-symbols-outlined">nightlight</span>
+    </button>
     <div class="pages" id="page_1">
-	 <div>
         <div>
-          <img src="favicon.jpeg"/>
-          <div id="kiki" class="lop">
-          </div>
-</div>
-        <button id="match" onclick="apper()">Create Match</button>
-          <div id="prin" style="overflow-y: auto; height: 20vh; border-top: 2px solid tomato;">
-        <table id="retab">
-            <tr>
-                <td>HOME</td>
-                <td>SCORE</td>
-                <td>AWAY</td>
-                <td>SCORE</td>
-            </tr>
-        </table>
-          </div>
+            <div>
+                <img src="favicon.jpeg"/>
+                <div id="kiki" class="lop"></div>
+            </div>
+            <button id="match" onclick="apper()">Create Match</button>
+            <div id="prin" style="overflow-y: auto; height: 20vh; border-top: 2px solid tomato;">
+                <table id="retab">
+                    <tr>
+                        <td>HOME</td>
+                        <td>SCORE</td>
+                        <td>AWAY</td>
+                        <td>SCORE</td>
+                    </tr>
+                </table>
+            </div>
             <br>
-			<button id="pliee" style="border-radius: 20px;" class="loli">PRINT</button>
-    </div>
+            <button id="pliee" style="border-radius: 20px;" class="loli">PRINT</button>
+        </div>
     </div>
     <div class="pages" id="page_2">
         <section class="sect">
             <h3>TEAM INFORMATION</h3>
-        <div class="clik1">
-            <div>
-            <h4>TEAM ONE</h4>
-            <h5>TEAM NAME</h5>
-        <input type="text" id="t_1" placeholder="team name"/>
-    <button class="dym" onclick="reel()">SUBMIT TEAM ONE</button>
-    </div>
-    </div> 
-    <div class="clik2">
-        <div>
-        <h4>TEAM TWO</h4>
-        <h5>TEAM NAME</h5>
-    <input type="text" id="t_2" placeholder="team name"/>
-    <button class="dym" onclick="ripple()">SUBMIT TEAM TWO</button>
-    </div>
-</div>
-			<div class="clik3">
-						<section>
-				<h5>TEAM LOGOS</h5>
-				<div class="log">
-					<section>
-            <input type="file" id="logo_s" name="files[]" multiple/>
-            </section>		
-				</div>
-		<div id="txti" style="text-decoration: underline;">CLICK IN THE BOX TO CHOOSE TWO IMAGES</div>
- 		<button class="dym" onClick="toem()">SUBMIT LOGOS</button>
-						</section>
-			</div>
-<div id="typom">
-    <h5>MATCH DURATION</h5>
-    <input type="text" id="hh" placeholder="Hours" value="00"/>
-    <input type="text" id="mm" placeholder="minutes"value="00"/>
-    <input type="text" id="ss" placeholder="seconds" value="00"/>
-	<button class="dym" onclick="tyym()">SUBMIT TIME</button>
-</div>
-</section>
+            <div class="clik1">
+                <div>
+                    <h4>TEAM ONE</h4>
+                    <h5>TEAM NAME</h5>
+                    <input type="text" id="t_1" placeholder="team name"/>
+                    <button class="dym" onclick="reel()">SUBMIT TEAM ONE</button>
+                </div>
+            </div> 
+            <div class="clik2">
+                <div>
+                    <h4>TEAM TWO</h4>
+                    <h5>TEAM NAME</h5>
+                    <input type="text" id="t_2" placeholder="team name"/>
+                    <button class="dym" onclick="ripple()">SUBMIT TEAM TWO</button>
+                </div>
+            </div>
+            <div class="clik3">
+                <section>
+                    <h5>TEAM LOGOS</h5>
+                    <div class="log">
+                        <section>
+                            <input type="file" id="logo_s" name="files[]" multiple/>
+                        </section>     
+                    </div>
+                    <div id="txti" style="text-decoration: underline;">CLICK IN THE BOX TO CHOOSE TWO IMAGES</div>
+                    <button class="dym" onClick="toem()">SUBMIT LOGOS</button>
+                </section>
+            </div>
+            <div id="typom">
+                <h5>MATCH DURATION</h5>
+                <input type="text" id="hh" placeholder="Hours" value="00"/>
+                <input type="text" id="mm" placeholder="minutes"value="00"/>
+                <input type="text" id="ss" placeholder="seconds" value="00"/>
+                <button class="dym" onclick="tyym()">SUBMIT TIME</button>
+            </div>
+        </section>
     </div>
     <div class="pages" id="page_3">
-      <div class="connn">
-        <input type="button" id="fron" class="loli" value="back"/>
-        <input type="button" id="back" class="loli" value="confirm"/>
-      </div>
+        <div class="connn">
+            <input type="button" id="fron" class="loli" value="back"/>
+            <input type="button" id="back" class="loli" value="confirm"/>
+        </div>
         <div id="card_1">
-            <H2>HOME</H2>
+            <h2>HOME</h2>
             <div class="hl">
-            <section class="hold" id="oinkk"></section>
+                <section class="hold" id="oinkk"></section>
             </div>
             <section class="namehold" id="team-name_1">TEAM ONE</section>
-            <div id="tym"><span id="hhh">00</span>:<span id="mmm">00</span>:<span id="sss">00</span></div>
+            <div id="tym">
+                <span id="hhh">00</span>:<span id="mmm">00</span>:<span id="sss">00</span>
+            </div>
         </div>
         <div id="card_2">
             <h2>AWAY</h2>
             <div class="hl">
-            <section class="hold" id="lolip"></section>
+                <section class="hold" id="lolip"></section>
             </div>
             <section class="namehold" id="team-name_2">TEAM TWO</section>
-            <div id="tym"><span id="hxh">00</span>:<span id="mxm">00</span>:<span id="sxs">00</span></div>
+            <div id="tym">
+                <span id="hxh">00</span>:<span id="mxm">00</span>:<span id="sxs">00</span>
+            </div>
         </div>
     </div>
     <div class="pages" id="page_4">
-			  <div class="contain" id="extratime" style="visibility: hidden;">
-			    <div class="cont">
-			      <h4>Extra Time</h4>
-			      <input type="text" id="hrs" placeholder="Hours"/>
-			      <input type="text" id="mns" placeholder="Minutes"/>
-			      <input type="text" id="scs" placeholder="Seconds"/>
-			      <button onclick="extra()">ADD</button>
-			    </div>
-			  </div>
-			<input type="button" class="tabule" style="display: none; width: 100vw;" id="coww" value="TABULATE MATCH"/>
+        <div class="contain" id="extratime" style="visibility: hidden;">
+            <div class="cont">
+                <h4>Extra Time</h4>
+                <input type="text" id="hrs" placeholder="Hours"/>
+                <input type="text" id="mns" placeholder="Minutes"/>
+                <input type="text" id="scs" placeholder="Seconds"/>
+                <button onclick="extra()">ADD</button>
+            </div>
+        </div>
+        <input type="button" class="tabule" style="display: none; width: 100vw;" id="coww" value="TABULATE MATCH"/>
         <div class="bars" id="team-1">
             <div class="nimo"><span class="jiek" id="image1001"></span><span id="rell">TEAM NAME</span></div>
             <input id="tio_1" class="tent" type="text" value="0"/>
             <div>
-            <button class="addd" onClick="plus_1()">1</button> 
-            <button class="addd" onClick="plus_2()">2</button> 
-            <button class="addd" onClick="plus_3()">3</button> 
-        </div>
+                <button class="addd" onClick="plus_1()">1</button> 
+                <button class="addd" onClick="plus_2()">2</button> 
+                <button class="addd" onClick="plus_3()">3</button> 
+            </div>
         </div>
         <div class="bars" id="team-2">
             <div class="nimo"><span class="jiek" id="image2002"></span><span id="roll">TEAM NAME</span></div>
             <input id="tio_2" class="tent" type="text" value="0"/>
             <div>
-            <button class="addd" onClick="poly_1()">1</button> 
-            <button class="addd" onClick="poly_2()">2</button> 
-            <button class="addd" onClick="poly_3()">3</button> 
+                <button class="addd" onClick="poly_1()">1</button> 
+                <button class="addd" onClick="poly_2()">2</button> 
+                <button class="addd" onClick="poly_3()">3</button> 
+            </div>
         </div>
+        <div id="tym">
+            <span id="hours">00</span>:
+            <span id="minutes">00</span>:
+            <span id="secs">00</span>
+            <input type="button" class="loli" onClick="holdr()" id="couy" value="START"/>
+            <button onclick="appear()" class="loli">Extra time</button>
         </div>
-			<div id="tym">
-		<span id="hours">00</span>:
-		<span id="minutes">00</span>:
-		<span id="secs">00</span>
-		<input type="button" class="loli" onClick="holdr()" id="couy" value="START"/>
-		<button onclick="appear()" class="loli">Extra time </button>
-	</div>
     </div>
     <script src="green.js"></script>
-    </body>
-    </html>
+</body>
+</html>
