--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div class="pages" id="page_1">
+        <div class="copy">
+            @Copyright Nextgen Group S4 2024_Ndejje SSS
+            <a href="Nextgen user manual.pdf">USER MANUAL</a>
+        </div>
            <a href="#" id="link-holder"></a>
     <button id="color-theme">
         <span class="material-symbols-outlined">nightlight</span>
