--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
     <link rel="icon" type="image/x-icon" href="favicon-removebg-preview.png"/>
     <title>Nextgen Scoreboard</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3185701102565817"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="pages" id="page_1">
