--- a/Ndejje Sports/normal.html
+++ b/Ndejje Sports/normal.html
@@ -178,7 +178,9 @@ download
             </div>
         </div>
     </div>
-
+<footer class="site-footer">
+  <p>&copy; <span id="year"></span> Ndejje Sports. All rights reserved.</p>
+</footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.12.1/html2pdf.bundle.min.js" integrity="sha512-D25Z8/1q2z65ZpJ3NzY6XiPZfwjhbv34OTQHDIZd+KPK+uWCovGt+fMkSzW8ArzCMFUgZt6Cdu7qoXNuy6a2GA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="aip.js"></script>
       <script type="module">
