--- a/Ndejje Sports/signup.html
+++ b/Ndejje Sports/signup.html
@@ -107,6 +107,9 @@ visibility
             </div>
         </div>
     </div>
+    <footer class="site-footer">
+  <p>&copy; <span id="year"></span> Ndejje Sports. All rights reserved.</p>
+    </footer>
     
     <script src="aip.js"></script>
      <script type="module">
