--- a/Ndejje Sports/index.html
+++ b/Ndejje Sports/index.html
@@ -62,6 +62,9 @@
             </div>
         </div>
     </div>
+    <footer class="site-footer">
+  <p>&copy; <span id="year"></span> Ndejje Sports. All rights reserved.</p>
+    </footer>
 
     <script src="aip.js"></script>
       <script type="module">
