--- a/Ndejje Sports/index.html
+++ b/Ndejje Sports/index.html
@@ -40,7 +40,8 @@
                         <span class="sport-icon bounce-5">🏉</span>
                     </div>
                     <h2 class="gradient-text">Welcome to Ndejje Sports</h2>
-                    <p class="fade-in-text">Track and manage sports performance across all clubs and competitions</p>
+                    <p class="fade-in-text">Keep track of house performance across all sports and competitions in Ndejje 
+                    Senior Secondary School.</p>
                     <div class="stats-preview">
                         <div class="stat-box">
                             <span class="stat-number counter" data-target="7">0</span>
