--- a/Ndejje Sports/signup.html
+++ b/Ndejje Sports/signup.html
@@ -117,7 +117,7 @@ visibility
   <p>&copy; <span id="year"></span> Ndejje Sports. All rights reserved.</p>
 </footer>
     
-    <script src="aip.js"></script>
+    <script src="aep.js"></script>
      <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
   import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-analytics.js";
