--- a/Ndejje Sports/index.html
+++ b/Ndejje Sports/index.html
@@ -67,6 +67,7 @@
   <p>&copy; <span id="year"></span> Ndejje Sports. All rights reserved.</p>
     </footer>
 
+     <script src="app.js"></script>
     <script src="aip.js"></script>
       <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
