--- a/Ndejje Sports/admin.html
+++ b/Ndejje Sports/admin.html
@@ -808,6 +808,7 @@ function sendMessage() {
     })
     .then(() => {
       chatroomHolder.style.display = 'none';
+      notificationHolder.style.display = 'none';
       document.body.style.overflow = 'auto';
     });
   });
