--- a/Ndejje Sports/normal.html
+++ b/Ndejje Sports/normal.html
@@ -252,6 +252,10 @@ download
     
     document.addEventListener('DOMContentLoaded', () => {
    onAuthStateChanged(auth, (user) => {
+       if (!user) {
+      window.location.href = "index.html";
+      return;
+    }
        var UserEmail = user.email;
       var loginUserRef = ref(db, "users/");
        get(loginUserRef)
@@ -688,6 +692,7 @@ function sendMessage() {
     })
     .then(() => {
       chatroomHolder.style.display = 'none';
+      notificationHolder.style.display = 'none';
       document.body.style.overflow = 'auto';
     });
   });
