--- a/Ndejje Sports/signup.html
+++ b/Ndejje Sports/signup.html
@@ -116,7 +116,7 @@ visibility
     <footer class="site-footer">
   <p>&copy; <span id="year"></span> Ndejje Sports. All rights reserved.</p>
 </footer>
-    
+    <script src="aip.js"></script>
     <script src="aep.js"></script>
      <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
