--- a/Ndejje Sports/admin.html
+++ b/Ndejje Sports/admin.html
@@ -279,7 +279,7 @@ folder_delete
 </div>
 
 <footer class="site-footer">
-  <p>&copy; <span id="year"></span> Ndejje Sports. All rights reserved.</p>
+  <p>&copy;Ndejje Sports created by ICT club (2025-2026), All rights reserved.</p>
 </footer>
     
       <script src="aip.js"></script>
