--- a/Ndejje Sports/signup.html
+++ b/Ndejje Sports/signup.html
@@ -16,7 +16,7 @@
 </head>
 <body class="quicksand-bodyfont">
  
-
+<!--alert-->
    <div id="alert" class="full">     
     </div>
     <!-- Sign Up Page -->
