--- a/Ndejje Sports/index.html
+++ b/Ndejje Sports/index.html
@@ -64,8 +64,8 @@
         </div>
     </div>
     <footer class="site-footer">
-  <p>&copy; <span id="year"></span> Ndejje Sports. All rights reserved.</p>
-    </footer>
+  <p>&copy;Ndejje Sports created by ICT club (2025-2026), All rights reserved.</p>
+</footer>
 
      <script src="app.js"></script>
     <script src="aip.js"></script>
