--- a/Ndejje Sports/admin.html
+++ b/Ndejje Sports/admin.html
@@ -109,7 +109,23 @@ chat
     <div class="dashboard-content">
 
       <div class="admin-sections">
+<!--fixture display-->
+<div class="fixture-card">
+        <div class="teams">
+            <span class="club">Manchester United</span>
+            <span class="vs">vs</span>
+            <span class="club">Chelsea</span>
+        </div>
+        <div class="details">
+            <p><strong>Sport:</strong> Football</p>
+            <p><strong>Date:</strong> 12 March 2026</p>
+            <p><strong>Time:</strong> 6:00 PM</p>
+        </div>
+    </div>
 
+    
+
+</div>
         <!-- CURRENT SPORT PERFORMANCE -->
         <div class="section full-width glass-card slide-up">
           <div class="section-header">
@@ -1013,7 +1029,7 @@ setFixtureBtn.addEventListener("click", () => {
  
   var fixtureQuery = query(ref(db, `fixture/${currentSport}`));
   onValue(fixtureQuery, (snapshot) => {
-    
+
   });
 
     </script>
