--- a/Ndejje Sports/normal.html
+++ b/Ndejje Sports/normal.html
@@ -86,7 +86,8 @@
 
     <!-- ================= FIXTURE CARD ================= -->
     <div class="fixture-card">
-      <div class="teams">
+      <div class="fixture">
+        <div class="teams">
         <span class="club">Manchester United</span>
         <span class="vs">vs</span>
         <span class="club">Chelsea</span>
@@ -97,6 +98,8 @@
         <p><strong>Date:</strong> 12 March 2026</p>
         <p><strong>Time:</strong> 6:00 PM</p>
       </div>
+      </div>
+      
     </div>
 
 
