--- a/Ndejje Sports/admin.html
+++ b/Ndejje Sports/admin.html
@@ -133,7 +133,9 @@
               <span id="admin-sport-title">Monitor Sport</span>
             </h3>
 
-            <button class="btn btn-primary fixture-game-btn ripple-btn pulse-btn"
+            <div style="display: flex; gap: 20px;">
+
+               <button class="btn btn-primary fixture-game-btn ripple-btn pulse-btn"
                     onclick="toggleFixtureForm()">
               <span class="btn-icon">➕</span> Set Game Fixture
             </button>
@@ -142,6 +144,8 @@
                     onclick="toggleGameForm()">
               <span class="btn-icon">➕</span> Record New Game
             </button>
+            </div>
+           
 
           </div>
 
