--- a/Ndejje Sports/normal.html
+++ b/Ndejje Sports/normal.html
@@ -403,6 +403,33 @@ onValue(messageQuery, (snapshot) => {
               }
                 
           });
+           //fixture download
+  var fixtureQuery = query(ref(db, `fixture/${currentSport}`));
+  var fixtureHolder = document.querySelector('.fixture-card');
+
+  onValue(fixtureQuery, (snapshot) => {
+    if (!snapshot.exists()) return
+    fixtureHolder.innerHTML = "";
+    var data = snapshot.val();
+    Object.keys(data).forEach(key => {
+      fixtureHolder.innerHTML += `
+       <div class="fixture">
+        <div class="teams">
+        <span class="club">${data[key].houseOne}</span>
+        <span class="vs">vs</span>
+        <span class="club">${data[key].houseTwo}</span>
+      </div>
+
+      <div class="details">
+        <p><strong>Sport:</strong> ${data[key].sport}</p>
+        <p><strong>Date:</strong> ${data[key].matchDate}</p>
+        <p><strong>Time:</strong> ${data[key].matchDateTime}</p>
+      </div>
+      </div>
+      `;
+    });
+  });
+
    });
 });
     
@@ -756,10 +783,6 @@ function sendMessage() {
     });
   });
   // recent games tabulation
-tabulationQuery = query(
-  ref(db, `recents/`),
-  orderByChild("timestamp")
-);
 var resultsTableHolder = document.querySelector("#recent-games-table");
 var recentGameBtns = document.querySelectorAll(".recent-btn");
 
