--- a/Ndejje Sports/admin.html
+++ b/Ndejje Sports/admin.html
@@ -234,6 +234,140 @@
             </div>
           </div>
         </div>
+        <!-- ================= GAME RECORD FORM ================= -->
+<div class="section full-width glass-card game-form-section"
+     id="game-recording-section"
+     style="display: none;">
+
+  <div class="form-header-admin">
+    <h3>Add New Game Record</h3>
+  </div>
+
+  <div class="form-card enhanced-form">
+    <div id="game-form">
+
+      <!-- ========= MATCH ROW ========= -->
+      <div class="form-row match-row">
+
+        <!-- House A -->
+        <div class="form-group team-group">
+          <label for="clubA">House A</label>
+          <select id="clubA" required>
+            <option value="">Select House A</option>
+            <option value="Muyingo">Muyingo</option>
+            <option value="Kabalega">Kabalega</option>
+            <option value="Walusimbi">Walusimbi</option>
+            <option value="Muteesa">Muteesa</option>
+            <option value="Mboya">Mboya</option>
+            <option value="Lumumba">Lumumba</option>
+            <option value="Lubambula">Lubambula</option>
+          </select>
+        </div>
+
+        <!-- Score A -->
+        <div class="form-group score-group">
+          <label for="scoreA">Score</label>
+          <input type="number"
+                 id="scoreA"
+                 min="0"
+                 placeholder="0"
+                 required>
+        </div>
+
+        <!-- VS -->
+        <div class="vs-separator">
+          <span class="vs-text">VS</span>
+        </div>
+
+        <!-- Score B -->
+        <div class="form-group score-group">
+          <label for="scoreB">Score</label>
+          <input type="number"
+                 id="scoreB"
+                 min="0"
+                 placeholder="0"
+                 required>
+        </div>
+
+        <!-- House B -->
+        <div class="form-group team-group">
+          <label for="clubB">House B</label>
+          <select id="clubB" required>
+            <option value="">Select House B</option>
+            <option value="Muyingo">Muyingo</option>
+            <option value="Kabalega">Kabalega</option>
+            <option value="Walusimbi">Walusimbi</option>
+            <option value="Muteesa">Muteesa</option>
+            <option value="Mboya">Mboya</option>
+            <option value="Lumumba">Lumumba</option>
+            <option value="Lubambula">Lubambula</option>
+          </select>
+        </div>
+
+      </div>
+      <!-- ========= END MATCH ROW ========= -->
+
+
+      <!-- ========= MVP ROW ========= -->
+      <div class="form-row">
+        <div class="form-group mvp">
+
+          <label for="mvp">MVP (Optional)</label>
+
+          <input type="text"
+                 id="mvp"
+                 placeholder="Enter MVP name">
+
+          <select id="mvp-class">
+            <option value="">Select MVP Class</option>
+            <option value="S1">S.1</option>
+            <option value="S2">S.2</option>
+            <option value="S3">S.3</option>
+            <option value="S4">S.4</option>
+            <option value="S5">S.5</option>
+            <option value="S6">S.6</option>
+          </select>
+
+          <select id="mvp-house">
+            <option value="">Select MVP House</option>
+            <option value="Kabalega">Kabalega</option>
+            <option value="Lubambula">Lubambula</option>
+            <option value="Lumumba">Lumumba</option>
+            <option value="Mboya">Mboya</option>
+            <option value="Muteesa">Muteesa</option>
+            <option value="Muyingo">Muyingo</option>
+            <option value="Walusimbi">Walusimbi</option>
+          </select>
+
+        </div>
+      </div>
+      <!-- ========= END MVP ROW ========= -->
+
+
+      <!-- ========= SUBMIT ROW ========= -->
+      <div class="form-group submit-group">
+
+        <button id="gameSubmit"
+                type="button"
+                class="btn btn-primary">
+          ✓ Submit Game Record
+        </button>
+
+        <button type="button"
+                class="btn btn-secondary"
+                onclick="toggleGameForm()">
+          ✕ Cancel
+        </button>
+
+      </div>
+      <!-- ========= END SUBMIT ROW ========= -->
+
+    </div>
+  </div>
+
+</div>
+<!-- ================= END GAME RECORD FORM ================= -->
+        
 
         <!-- ================= RECENT GAMES ================= -->
         <div class="section full-width glass-card slide-up-delayed"
