--- a/Ndejje Sports/signup.html
+++ b/Ndejje Sports/signup.html
@@ -114,8 +114,11 @@ visibility
         </div>
     </div>
     <footer class="site-footer">
-  <p>&copy; <span id="year"></span> Ndejje Sports. All rights reserved.</p>
-</footer>
+       <p>
+    &copy; <span id="year"></span> 
+    Ndejje Sports created by ICT club (2025-2026), All rights reserved.
+  </p>
+    </footer>
     <script src="aip.js"></script>
     <script src="aep.js"></script>
      <script type="module">
