--- a/Ndejje Sports/admin.html
+++ b/Ndejje Sports/admin.html
@@ -108,18 +108,21 @@
 
         <!-- FIXTURE DISPLAY -->
         <div class="fixture-card">
-          <div class="teams">
-            <span class="club">Manchester United</span>
-            <span class="vs">vs</span>
-            <span class="club">Chelsea</span>
-          </div>
+      <div class="fixture">
+        <div class="teams">
+        <span class="club">Manchester United</span>
+        <span class="vs">vs</span>
+        <span class="club">Chelsea</span>
+      </div>
 
-          <div class="details">
-            <p id="fixture-sport"></p>
-            <p id="fixture-date"></p>
-            <p id="fixture-time"></p>
-          </div>
-        </div>
+      <div class="details">
+        <p><strong>Sport:</strong> Football</p>
+        <p><strong>Date:</strong> 12 March 2026</p>
+        <p><strong>Time:</strong> 6:00 PM</p>
+      </div>
+      </div>
+      
+    </div>
 
         <!-- CURRENT SPORT PERFORMANCE -->
         <div class="section full-width glass-card slide-up">
