--- a/Ndejje Sports/normal.html
+++ b/Ndejje Sports/normal.html
@@ -85,20 +85,8 @@
 
 
     <!-- ================= FIXTURE CARD ================= -->
-    <div class="fixture-card">
-      <div class="fixture">
-        <div class="teams">
-        <span class="club">Manchester United</span>
-        <span class="vs">vs</span>
-        <span class="club">Chelsea</span>
-      </div>
-
-      <div class="details">
-        <p><strong>Sport:</strong> Football</p>
-        <p><strong>Date:</strong> 12 March 2026</p>
-        <p><strong>Time:</strong> 6:00 PM</p>
-      </div>
-      </div>
+    <div class="fixture-card" style="display: none;">
+     
       
     </div>
 
@@ -410,6 +398,7 @@ onValue(messageQuery, (snapshot) => {
   onValue(fixtureQuery, (snapshot) => {
     if (!snapshot.exists()) return
     fixtureHolder.innerHTML = "";
+    fixtureHolder.style.display = "block";
     var data = snapshot.val();
     Object.keys(data).forEach(key => {
       fixtureHolder.innerHTML += `
