--- a/Ndejje Sports/admin.html
+++ b/Ndejje Sports/admin.html
@@ -109,18 +109,6 @@
         <!-- FIXTURE DISPLAY -->
         <div class="fixture-card">
       <div class="fixture">
-        <div class="teams">
-        <span class="club">Manchester United</span>
-        <span class="vs">vs</span>
-        <span class="club">Chelsea</span>
-      </div>
-
-      <div class="details">
-        <p><strong>Sport:</strong> Football</p>
-        <p><strong>Date:</strong> 12 March 2026</p>
-        <p><strong>Time:</strong> 6:00 PM</p>
-      </div>
-      </div>
       
     </div>
 
@@ -1049,6 +1037,7 @@ function saveFixture() {
     
     document.querySelector("#fixtureDate").value = "";
     document.querySelector("#fixtureTime").value = "";
+    toggleFixtureForm()
 
   });
 }
